// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should match snapshot and have correct element, text, height & font-size based on small prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 1px solid #dddddd;
  box-sizing: border-box;
  font-size: 1rem;
  height: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  width: 100%;
}

<Component
  theme={
    Object {
      "black": "#111111",
      "grey": "#898989",
      "greyDark": "#777777",
      "greyDarker": "#595959",
      "greyDarkest": "#222",
      "greyLight": "#a5a5a5",
      "greyLighter": "#dddddd",
      "greyLightest": "#efefef",
      "main": "#214154",
      "mainDarken": "#08283B",
      "mainLighten": "#3B5B6E",
      "white": "#f6f6f6",
    }
  }
>
  <styled.div
    theme={
      Object {
        "black": "#111111",
        "grey": "#898989",
        "greyDark": "#777777",
        "greyDarker": "#595959",
        "greyDarkest": "#222",
        "greyLight": "#a5a5a5",
        "greyLighter": "#dddddd",
        "greyLightest": "#efefef",
        "main": "#214154",
        "mainDarken": "#08283B",
        "mainLighten": "#3B5B6E",
        "white": "#f6f6f6",
      }
    }
  >
    <div
      className="c0"
    >
      <styled.select
        theme={
          Object {
            "black": "#111111",
            "grey": "#898989",
            "greyDark": "#777777",
            "greyDarker": "#595959",
            "greyDarkest": "#222",
            "greyLight": "#a5a5a5",
            "greyLighter": "#dddddd",
            "greyLightest": "#efefef",
            "main": "#214154",
            "mainDarken": "#08283B",
            "mainLighten": "#3B5B6E",
            "white": "#f6f6f6",
          }
        }
      >
        <select
          className="c1"
        >
          <option>
            Option 1
          </option>
        </select>
      </styled.select>
    </div>
  </styled.div>
</Component>
`;

exports[`<Select /> should match snapshot and have label element if passed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  border: 1px solid #dddddd;
  box-sizing: border-box;
  font-size: 1rem;
  height: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  width: 100%;
}

.c1 {
  font-size: 1rem;
  line-height: 2rem;
}

<Component
  error="Error 1"
  label="Label 1"
  theme={
    Object {
      "black": "#111111",
      "grey": "#898989",
      "greyDark": "#777777",
      "greyDarker": "#595959",
      "greyDarkest": "#222",
      "greyLight": "#a5a5a5",
      "greyLighter": "#dddddd",
      "greyLightest": "#efefef",
      "main": "#214154",
      "mainDarken": "#08283B",
      "mainLighten": "#3B5B6E",
      "white": "#f6f6f6",
    }
  }
>
  <styled.div
    error="Error 1"
    theme={
      Object {
        "black": "#111111",
        "grey": "#898989",
        "greyDark": "#777777",
        "greyDarker": "#595959",
        "greyDarkest": "#222",
        "greyLight": "#a5a5a5",
        "greyLighter": "#dddddd",
        "greyLightest": "#efefef",
        "main": "#214154",
        "mainDarken": "#08283B",
        "mainLighten": "#3B5B6E",
        "white": "#f6f6f6",
      }
    }
  >
    <div
      className="c0"
    >
      <Component
        error="Error 1"
        theme={
          Object {
            "black": "#111111",
            "grey": "#898989",
            "greyDark": "#777777",
            "greyDarker": "#595959",
            "greyDarkest": "#222",
            "greyLight": "#a5a5a5",
            "greyLighter": "#dddddd",
            "greyLightest": "#efefef",
            "main": "#214154",
            "mainDarken": "#08283B",
            "mainLighten": "#3B5B6E",
            "white": "#f6f6f6",
          }
        }
      >
        <styled.label
          error="Error 1"
          theme={
            Object {
              "black": "#111111",
              "grey": "#898989",
              "greyDark": "#777777",
              "greyDarker": "#595959",
              "greyDarkest": "#222",
              "greyLight": "#a5a5a5",
              "greyLighter": "#dddddd",
              "greyLightest": "#efefef",
              "main": "#214154",
              "mainDarken": "#08283B",
              "mainLighten": "#3B5B6E",
              "white": "#f6f6f6",
            }
          }
        >
          <label
            className="c1"
          >
            Label 1
          </label>
        </styled.label>
      </Component>
      <styled.select
        error="Error 1"
        theme={
          Object {
            "black": "#111111",
            "grey": "#898989",
            "greyDark": "#777777",
            "greyDarker": "#595959",
            "greyDarkest": "#222",
            "greyLight": "#a5a5a5",
            "greyLighter": "#dddddd",
            "greyLightest": "#efefef",
            "main": "#214154",
            "mainDarken": "#08283B",
            "mainLighten": "#3B5B6E",
            "white": "#f6f6f6",
          }
        }
      >
        <select
          className="c2"
        >
          <option>
            Option 1
          </option>
        </select>
      </styled.select>
    </div>
  </styled.div>
</Component>
`;
